# IngS2

./: .gitignore  README.md  app.py  cert.pem  install_log.txt  key.pem  pyproject.toml  requirements.txt
PaginaWeb/: README.md  pyproject.toml  requirements.txt
PaginaWeb/src/core/: database.py
PaginaWeb/src/core/Usuario/: Card.py  Roles_y_Permisos.py  User.py
PaginaWeb/src/web/: __init__.py  commands.py  config.py
PaginaWeb/src/web/controllers/: user.py
src/core/: database.py  models.py
src/core/Alquiler/: Alquiler.py  Rental.py
src/core/Inmueble/: Inmueble.py  property.py  property_photo.py
src/core/Inmueble/localidad/: Cargar_localidades.py  Localidad.py
src/core/Resenia/: Review.py
src/core/Reserva/: UpgradeRequest.py  reservation.py
src/core/Usuario/: Card.py  Compañero.py  Roles_y_Permisos.py  User.py
src/utils/: email.py  token.py
src/web/: __init__.py  commands.py  config.py  route.py  script.py
src/web/controllers/: Register.py  Reservation.py  Review.py  login.py  property.py  rental.py  user.py
src/web/forms/: forms.py
src/web/handlers/: auth.py
src/web/templates/: home.html  layout.html
src/web/templates/Alquileres/: create.html  current_reservation.html  edit.html  index.html  show.html  upgrade_form.html
src/web/templates/Propiedades/: create.html  delete.html  edit.html  index.html  localidad_agregar.html  localidad_eliminar.html  show.html
src/web/templates/Reservacion/: index.html  mis_reservas.html  rentals.html  reservation.html  show_rental.html
src/web/templates/auth/: forgot_password.html  login.html  (+2 more)
(+5 files in other folders)
